2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed tag to use OPENJDK_VERSION var.
	* Makefile.in: Likewise.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added --with-openjdk-src-zip support back in. Also,
	openjdk is cloned based on release tag.
	* Makefile.in: Regenerate.
	* acinclude.m4: Added --with-openjdk-src-zip support back in.
	* configure: Regenerate.
	* configure.ac: Added --with-openjdk-src-zip support back in.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed update target to create stamp.
	* Makefile.in: Regenerate.

2007-12-10  Lillian Angel  <langel@redhat.com>
	
	* INSTALL: Updated requirements.
	* Makefile.am: Update to b24- use hg to clone/update openjdk.
	* Makefile.in: Regenerate.
	* acinclude.m4: Removed unneeded option (--with-openjdk-src-zip).
	* configure.ac: Likewise. 
	* configure: Regenerate.
	* generated/*: Regenerated all files for b24.
	* patches/icedtea-core-build.patch: Updated for b24.
	* patches/icedtea-ecj.patch: Likewise.

2007-12-07  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Removed libjsoundalso.so, libjsound.so,libt2k.so.
	* Makefile.in: Regenerate.
	* rt/gnu/java/io/Base64InputStream.java: Removed, not used.

2007-12-05  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add ports directory.
	* Makefile.in: Regenerate.

2007-12-04  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-c1-unimplemented.patch: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add the above.
	* Makefile.in: Regenerate.

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	(is_simm, is_simm16): New methods.
	* ports/hotspot/src/cpu/ppc/vm/c1_CodeStubs_ppc.cpp
	(RangeCheckStub::RangeCheckStub): Implement.
	(NewInstanceStub::NewInstanceStub): Likewise.
	(NewInstanceStub::emit_code): Re-stub.
	* ports/hotspot/src/cpu/ppc/vm/c1_Defs_ppc.hpp
	(pd_nof_cpu_regs_frame_map): Set.
	(pd_nof_fpu_regs_frame_map): Likewise.
	(pd_nof_caller_save_cpu_regs_frame_map): Likewise.