@@ -1,5 +1,12 @@
 2007-12-10  Lillian Angel  <langel@redhat.com>
 
+	* Makefile.am (dist-openjdk): New target to create openjdk zip.
+	* Makefile.in: Regenerate.
+	* configure.ac: Added check for tar tool.
+	* configure: Regenerate.
+
+2007-12-10  Lillian Angel  <langel@redhat.com>
+
 	* Makefile.am: Changed tag to use OPENJDK_VERSION var.
 	* Makefile.in: Likewise.
 
